<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UWR Training</string>
    <string name="action_refresh">Aktualisieren</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_reset">Reset App Data</string>
    <string name="action_server_reload">Server Reload</string>
    <string name="action_submenu_advanced">Erweitert</string>
    <string name="pref_username_title">Dein Name</string>
    <string name="pref_username_summary_default">Kein Name angegeben</string>
    <string name="pref_username_default"></string>
    <string name="pref_club_title">Dein Verein</string>
    <string name="pref_club_summary_default">Kein Verein ausgewählt</string>
    <string name="pref_club_default"></string>
    <string name="lbl_version">Version</string>
    <string name="version_default">Version: unbekannt</string>
    <string name="msg_reset">Alle Einstellungen wurden zurückgesetzt.</string>
    <string name="msg_welcome">Hallo!\n\nDu musst nur noch kurz deinen Verein und deinen Namen angeben, dann geht\'s los.\n\nViel Spaß,\nHannes</string>
    <string name="loading_data">Lade Daten...</string>
    <string name="loading_data_failed">Fehler: Die Trainingsdaten konnten nicht geladen werden. Möglicherweise funktioniert deine Internetverbindung gerade nicht?</string>
    <string name="prefix_next_training">Nächstes Training:</string>
    <string name="time_and_location_dummy">11:30 - 12:30 Uhr in Zapfendorf</string>
    <string name="title_details">Details</string>
    <string name="lbl_you">Du:</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="lbl_comment">Kommentar:</string>
    <string name="zusagen_plural">Zusagen</string>
    <string name="zusagen_singular">Zusage</string>
    <string name="absagen_plural">Absagen</string>
    <string name="title_nixsager">Nichtssagend</string>
    <string name="title_settings">Einstellungen</string>
    <string name="msg_reply_failed">Das hat leider nicht geklappt :-(</string>
    <string name="msg_reply_yes">Oh yeah!</string>
    <string name="msg_reply_no">Ach komm schon...</string>
    <string name="cancel">Abbrechen</string>
    <string name="nixdialog_ab">Ab</string>
    <string name="nixdialog_an">An</string>
    <string name="lbl_num_btn_texts">Button Texte</string>
    <string name="feedback_rate">Dir gefällt die UWR Training App? Dann erzähl anderen davon, oder bewerte Sie im Play Store.</string>
    <string name="feedback_mail">Du hast eine Anregung für neue Button Texte? Du hast einen anderen Verbesserungsvorschlag für die App? Dann Mail an</string>
    <string name="feedback_github">Oder einfach auf github mitentwickeln:</string>
    <string name="title_version">Versionsinfos</string>
    <string name="title_feedback">Feedback</string>
    <string name="link_github">https://github.com/f00f/TrainingApp</string>
    <string name="link_mail">app@uwr1.de</string>
    <string name="action_goto_website">Zur Webseite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_mission">Deine Mission:</string>
    <string name="num_zusagen_dummy">5 Zusagen</string>
    <string name="mission_abgesagt">Du hast abgesagt.</string>
    <string name="mission_nixgesagt">Du hast noch nix gesagt.</string>
</resources>
