<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.uwr1.training.FeedbackFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title_feedback"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_feedback" />
        <TextView
            android:id="@+id/feedback_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/feedback_rate" />
        <TextView
            android:id="@+id/feedback_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/feedback_mail" />
        <TextView
            android:id="@+id/link_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onFeedbackClick"
            android:text="@string/link_mail" />
        <TextView
            android:id="@+id/feedback_github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/feedback_github" />
        <TextView
            android:id="@+id/link_github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onFeedbackClick"
            android:text="@string/link_github" />
    </LinearLayout>

</FrameLayout>
