<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ShowTraining">

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@android:drawable/ic_popup_sync"
        android:orderInCategory="10"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_reset"
        android:title="@string/action_reset"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="200" />
</menu>
